--- a/app/views/layouts/header.html.haml
+++ b/app/views/layouts/header.html.haml
@@ -1,1 +1,6 @@
-%div Wonderful
+%div.navbar.navbar-default.navbar-fixed-top
+  %div.container
+    %div.navbar-header
+      %a.navbar-brand Lighthouse
+    %div.collapse.navbar-collapse
+      %ul.nav.navbar-nav.navbar-right
