--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+.intro-header {
+  padding-top: 50px;
+  text-align: center;
+  background-image: url(image_path("intro_header.jpg"));
+  background-size: cover;
+  color: #f8f8f8;
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.6)
+}
+
+.intro-message {
+  padding-top: 20%;
+  padding-bottom: 20%;
+}
