--- a/app/views/layouts/footer.html.haml
+++ b/app/views/layouts/footer.html.haml
@@ -4,11 +4,11 @@
       %div.col-lg-12
         %ul.list-inline
           %li
-            %a Home
+            %a{:href => "#"} Home
           %li.footer-menu-divider &sdot;
           %li
-            %a About
+            %a{:href => "#"} About
           %li.footer-menu-divider &sdot;
           %li
-            %a Contact
+            %a{:href => "#"} Contact
         %p.copyright.text-muted.small Copyright &copy; 2015 | Made in Berkeley with &hearts;.
