--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,3 +6,20 @@
           %h1 Lighthouse
           %h3 Find your next favorite movie.
 
+%div.content-section-a
+  %div.container
+    %div.row
+      %div.col-lg-5.col-sm-6
+        %h2 Discover new movies
+        %p Tell us what movies you like and don't like and we'll find something for you.
+      %div.col-lg-5.col-lg-offset-2.col-sm-6
+        %img{ :src => image_path("welcome_first.jpg") }
+
+%div.content-section-b
+  %div.container
+    %div.row
+      %div.col-lg-5.col-sm-6
+        %img{ src: image_path("welcome_second.jpg") }
+      %div.col-lg-5.col-lg-offset-2.col-sm-6
+        %h2 Keep up with your friends
+        %p Chat with your friends about the latest flicks.
