--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -13,13 +13,13 @@
         %h2 Discover new movies
         %p Tell us what movies you like and don't like and we'll find something for you.
       %div.col-lg-5.col-lg-offset-2.col-sm-6
-        %img{ :src => image_path("welcome_first.jpg") }
+        %img{ src: image_path("welcome_first.jpg"), class: "img-responsive" }
 
 %div.content-section-b
   %div.container
     %div.row
       %div.col-lg-5.col-sm-6
-        %img{ src: image_path("welcome_second.jpg") }
+        %img{ src: image_path("welcome_second.jpg"), class: "img-responsive" }
       %div.col-lg-5.col-lg-offset-2.col-sm-6
         %h2 Keep up with your friends
         %p Chat with your friends about the latest flicks.
