--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -23,3 +23,9 @@
       %div.col-lg-5.col-lg-offset-2.col-sm-6
         %h2 Keep up with your friends
         %p Chat with your friends about the latest flicks.
+
+%div.banner
+  %div.container
+    %div.row
+      %div.col-lg-6
+        %h2 Get Started Now
