--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -43,3 +43,10 @@ h1, h2, h3, h4, h5, h6 {
   border-top: 1px solid #e7e7e7;
   border-bottom: 1px solid #e7e7e7;
 }
+
+.banner {
+  padding: 100px 0;
+  color: #f8f8f8;
+  background: url(image_path("banner.jpg"));
+  background-size: cover;
+}
