Center text on banner

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -49,4 +49,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #f8f8f8;
   background: url(image_path("banner.jpg"));
   background-size: cover;
+
+  h2 {
+    margin: 0;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+    font-size: 3em;
+    text-align: center;
+  }
+
 }
+
