Use rounded images

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -44,6 +44,19 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 1px solid #e7e7e7;
 }
 
+.section-heading {
+  margin-bottom: 30px;
+}
+
+.lead {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.content-img {
+  border-radius: 50%;
+}
+
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
