--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,19 +10,19 @@
   %div.container
     %div.row
       %div.col-lg-5.col-sm-6
-        %h2 Discover new movies
-        %p Tell us what movies you like and don't like and we'll find something for you.
+        %h2.section-heading Discover new movies
+        %p.lead Tell us what movies you like and don't like and we'll find something for you.
       %div.col-lg-5.col-lg-offset-2.col-sm-6
-        %img{ src: image_path("welcome_first.jpg"), class: "img-responsive" }
+        %img.img-responsive.content-img{ src: image_path("welcome_first.jpg") }
 
 %div.content-section-b
   %div.container
     %div.row
       %div.col-lg-5.col-sm-6
-        %img{ src: image_path("welcome_second.jpg"), class: "img-responsive" }
+        %img.img-responsive.content-img{ src: image_path("welcome_second.jpg") }
       %div.col-lg-5.col-lg-offset-2.col-sm-6
-        %h2 Keep up with your friends
-        %p Chat with your friends about the latest flicks.
+        %h2.section-heading Keep up with your friends
+        %p.lead Chat with your friends about the latest flicks.
 
 %div.banner
   %div.container
