Tweak the containers: larger fonts + more centered

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -18,11 +18,11 @@
 %div.content-section-b
   %div.container
     %div.row
-      %div.col-lg-5.col-sm-6
-        %img.img-responsive.content-img{ src: image_path("welcome_second.jpg") }
-      %div.col-lg-5.col-lg-offset-2.col-sm-6
+      %div.col-lg-5.col-lg-offset-1.col-sm-push-6.col-sm-6
         %h2.section-heading Keep up with your friends
         %p.lead Chat with your friends about the latest flicks.
+      %div.col-lg-5.col-sm-pull-6.col-sm-6
+        %img.img-responsive.content-img{ src: image_path("welcome_second.jpg") }
 
 %div.banner
   %div.container
