--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -45,11 +45,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .section-heading {
+  margin-top: 120px;
   margin-bottom: 30px;
+  font-size: 50px;
 }
 
 .lead {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 18px;
 }
 
