Add barebones about page and hook it up to the footer

--- a/app/views/layouts/footer.html.haml
+++ b/app/views/layouts/footer.html.haml
@@ -4,10 +4,10 @@
       %div.col-lg-12
         %ul.list-inline
           %li
-            %a{:href => "#"} Home
+            = link_to "Home", root_path
           %li.footer-menu-divider &sdot;
           %li
-            %a{:href => "#"} About
+            = link_to "About", about_path
           %li.footer-menu-divider &sdot;
           %li
             %a{:href => "#"} Contact
