Add some basics to the about page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -10,6 +10,7 @@ html, body {
 }
 
 body {
+  margin-top: 50px;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
 }
