--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the about controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.about-us {
+  background-color: #8C001A;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.founders {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: white;
+  text-align: center;
+
+  img {
+    margin: auto;
+  }
+}
+
+.centered {
+  text-align: center;
+}
+
+.white-text {
+  color: white;
+}
+
+.capitalized-header {
+  text-transform: uppercase;
+  font-size: 42px;
+}
