Add some logos to the about us page

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,7 +1,7 @@
 %div.about-us
   %div.container
     %h1.white-text.centered.capitalized-header About Us
-    %p.white-text.centered Lighthouse is building the world's premier site for movie watchers and movie recommendations.
+    %p.white-text.centered We're building the world's premier site for movie watchers and movie recommendations.
 
 %div.founders
   %div.container
@@ -16,3 +16,18 @@
         %img.img-responsive.content-img{ src: image_path("radhika.jpg") }
         %h2 Radhika Marvin
 
+%div.contact
+  %div.container
+    %div.row
+      %div.col-sm-12
+        %h1 Contact Us
+
+%div.contact-logos
+  %div.container
+    %div.row
+      %div.col-md-4
+        %i{ class: "fa fa-facebook fa-5x" }
+      %div.col-md-4
+        %i{ class: "fa fa-twitter fa-5x" }
+      %div.col-md-4
+        %i{ class: "fa fa-envelope-o fa-5x" }
