--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -6,6 +6,9 @@
   background-color: #8C001A;
   padding-top: 50px;
   padding-bottom: 50px;
+  p {
+    font-size: 16px;
+  }
 }
 
 .founders {
@@ -17,6 +20,21 @@
   img {
     margin: auto;
   }
+}
+
+.contact {
+  background-color: #8C001A;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
+  color: white;
+}
+
+.contact-logos {
+  background-color: white;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  text-align: center;
 }
 
 .centered {
