Add links to personal websites

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -10,11 +10,13 @@
         %h1 The Founders
     %div.row
       %div.col-md-6
-        %img.img-responsive.content-img{ src: image_path("kevin.jpg") }
-        %h2 Kevin Hwang
+        %a{ href: "http://www.kevinhwang.net" }
+          %img.img-responsive.content-img{ src: image_path("kevin.jpg") }
+          %h2 Kevin Hwang
       %div.col-md-6
-        %img.img-responsive.content-img{ src: image_path("radhika.jpg") }
-        %h2 Radhika Marvin
+        %a{ href: "http://radahika.github.io/" }
+          %img.img-responsive.content-img{ src: image_path("radhika.jpg") }
+          %h2 Radhika Marvin
 
 %div.contact
   %div.container
