Simplify the CSS

--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -1,9 +1,9 @@
-%div.about-us
+%div.fold.about-us
   %div.container
-    %h1.white-text.centered.capitalized-header About Us
-    %p.white-text.centered We're building the world's premier site for movie watchers and movie recommendations.
+    %h1.white-text.capitalized-header About Us
+    %p.white-text We're building the world's premier site for movie watchers and movie recommendations.
 
-%div.founders
+%div.fold.founders
   %div.container
     %div.row
       %div.col-sm-12
@@ -18,13 +18,13 @@
           %img.img-responsive.content-img{ src: image_path("radhika.jpg") }
           %h2 Radhika Marvin
 
-%div.contact
+%div.fold.contact.white-text
   %div.container
     %div.row
       %div.col-sm-12
         %h1 Contact Us
 
-%div.contact-logos
+%div.fold.contact-logos
   %div.container
     %div.row
       %div.col-md-4
