--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -2,20 +2,22 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.about-us {
-  background-color: #8C001A;
+.fold {
   padding-top: 50px;
   padding-bottom: 50px;
+  text-align: center;
+}
+
+.about-us {
+  background-color: #8C001A;
+  color: white;
   p {
     font-size: 16px;
   }
 }
 
 .founders {
-  padding-top: 50px;
-  padding-bottom: 50px;
   background-color: white;
-  text-align: center;
 
   img {
     margin: auto;
@@ -27,21 +29,11 @@
 
 .contact {
   background-color: #8C001A;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
   color: white;
 }
 
 .contact-logos {
   background-color: white;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-
-.centered {
-  text-align: center;
 }
 
 .white-text {
